  have now been removed. MediaWiki no longer supports any browser which would
  require this SVG-fallback PNG support, so you can simply use the regular CSS
  `background-image:` declaration instead.
* The ResourceLoader module `mediawiki.legacy.oldshared` and its file
  'oldshared.css', deprecated since 1.35 has been removed (T248357).
* The LinkBegin and LinkEnd hooks, deprecated in 1.28, have been removed. You
  can instead use the HtmlPageLinkRendererBegin and HtmlPageLinkRendererEnd
  hooks, respectively.
* Skin::getDynamicStylesheetQuery(), deprecated in 1.32, has been removed. You
  should use action=raw&ctype=text/css directly.
* Skin::makeI18nUrl(), deprecated in 1.35, has been removed.
* The following User methods, deprecated and moved to BlockManager in 1.34, were
  removed:
  - ::isDnsBlacklisted
  - ::inDnsBlacklist
  - ::isLocallyBlockedProxy
  - ::trackBlockWithCookie
* Support for v1 of the parser tests file format has been removed; it was
  deprecated in 1.35. (T174199)
* SpecialUnblockUser::processUIUnblock() now returns a Status object instead of
  an array of messages or a boolean value. This function was also marked as
  @internal and is no longer safe to call it publicly.
* mw.Title.getDotExtension() from the 'mediawiki.Title' module was removed
  without deprecation. You should use mw.Title.getExtension() and prepend the
  dot if need be.
* Profiler::getTemplated and Profiler::setTemplated, deprecated in 1.34, have
  been removed.
* Removed HookContainer::getOriginalHooksForTest() without deprecation. This
  method was introduced in 1.35 for internal use, and appears unused outside of
  MediaWiki core.
* ParserCache::__construct() now requires three parameters.
* Message->getFormat(), deprecated in 1.29, has been removed.
* Support for passing Article to ParserCache::get, deprecated in 1.35, has been
  removed.
* ParserCache::singleton(), deprecated in 1.30, has been removed.