@@ -324,6 +324,8 @@ because of Phabricator reports.
   `background-image:` declaration instead.
 * The ResourceLoader module `mediawiki.legacy.oldshared` and its file
   'oldshared.css', deprecated since 1.35 has been removed (T248357).
+* `ResourceLoader::__construct` now requires a Config parameter. The optional
+  nature of this parameter was deprecated in 1.34.
 * The LinkBegin and LinkEnd hooks, deprecated in 1.28, have been removed. You
   can instead use the HtmlPageLinkRendererBegin and HtmlPageLinkRendererEnd
   hooks, respectively.
